test_suite/tests/ui/with-container/incorrect_type.stderr
error[E0277]: the trait bound `&W: serde::Serializer` is not satisfied
  --> tests/ui/with-container/incorrect_type.rs:14:10
   |
14 | #[derive(Serialize, Deserialize)]
   |          ^^^^^^^^^ the trait `Serializer` is not implemented for `&W`
15 | #[serde(with = "w")]
   |                --- required by a bound introduced by this call
   |
help: the trait `Serializer` is implemented for `&mut Formatter<'a>`
  --> $WORKSPACE/serde_core/src/ser/fmt.rs
   |
   | impl<'a> Serializer for &mut fmt::Formatter<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `w::serialize`
  --> tests/ui/with-container/incorrect_type.rs:9:28
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |                            ^^^^^^^^^^ required by this bound in `serialize`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/with-container/incorrect_type.rs:15:16
   |
14 | #[derive(Serialize, Deserialize)]
   |          --------- unexpected argument #2 of type `__S`
15 | #[serde(with = "w")]
   |                ^^^
   |
note: function defined here
  --> tests/ui/with-container/incorrect_type.rs:9:12
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |            ^^^^^^^^^

error[E0277]: the trait bound `&W: serde::Serializer` is not satisfied
  --> tests/ui/with-container/incorrect_type.rs:15:16
   |
15 | #[serde(with = "w")]
   |                ^^^ the trait `Serializer` is not implemented for `&W`
   |
help: the trait `Serializer` is implemented for `&mut Formatter<'a>`
  --> $WORKSPACE/serde_core/src/ser/fmt.rs
   |
   | impl<'a> Serializer for &mut fmt::Formatter<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/with-container/incorrect_type.rs:15:16
   |
14 | #[derive(Serialize, Deserialize)]
   |                     ----------- expected `Result<W, <__D as Deserializer<'de>>::Error>` because of return type
15 | #[serde(with = "w")]
   |                ^^^ expected `Result<W, ...>`, found `Result<(), ...>`
   |
   = note: expected enum `Result<W, <__D as Deserializer<'de>>::Error>`
              found enum `Result<(), <__D as Deserializer<'_>>::Error>`

error[E0277]: the trait bound `&S: serde::Serializer` is not satisfied
  --> tests/ui/with-container/incorrect_type.rs:18:10
   |
18 | #[derive(Serialize, Deserialize)]
   |          ^^^^^^^^^ the trait `Serializer` is not implemented for `&S`
19 | #[serde(serialize_with = "w::serialize")]
   |                          -------------- required by a bound introduced by this call
   |
help: the trait `Serializer` is implemented for `&mut Formatter<'a>`
  --> $WORKSPACE/serde_core/src/ser/fmt.rs
   |
   | impl<'a> Serializer for &mut fmt::Formatter<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `w::serialize`
  --> tests/ui/with-container/incorrect_type.rs:9:28
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |                            ^^^^^^^^^^ required by this bound in `serialize`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/with-container/incorrect_type.rs:19:26
   |
18 | #[derive(Serialize, Deserialize)]
   |          --------- unexpected argument #2 of type `__S`
19 | #[serde(serialize_with = "w::serialize")]
   |                          ^^^^^^^^^^^^^^
   |
note: function defined here
  --> tests/ui/with-container/incorrect_type.rs:9:12
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |            ^^^^^^^^^

error[E0277]: the trait bound `&S: serde::Serializer` is not satisfied
  --> tests/ui/with-container/incorrect_type.rs:19:26
   |
19 | #[serde(serialize_with = "w::serialize")]
   |                          ^^^^^^^^^^^^^^ the trait `Serializer` is not implemented for `&S`
   |
help: the trait `Serializer` is implemented for `&mut Formatter<'a>`
  --> $WORKSPACE/serde_core/src/ser/fmt.rs
   |
   | impl<'a> Serializer for &mut fmt::Formatter<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/with-container/incorrect_type.rs:23:28
   |
22 | #[derive(Serialize, Deserialize)]
   |                     ----------- expected `Result<D, <__D as Deserializer<'de>>::Error>` because of return type
23 | #[serde(deserialize_with = "w::deserialize")]
   |                            ^^^^^^^^^^^^^^^^ expected `Result<D, ...>`, found `Result<(), ...>`
   |
   = note: expected enum `Result<D, <__D as Deserializer<'de>>::Error>`
              found enum `Result<(), <__D as Deserializer<'_>>::Error>`
